...
                                                    <color key="textColor" systemColor="secondaryLabelColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <button opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="751" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G06-Gl-um2">
                                                    <rect key="frame" x="357.5" y="35" width="48.5" height="31"/>
                                                    <state key="normal" title="Button"/>
                                                    <buttonConfiguration key="configuration" style="plain" title="구매">
                                                        <fontDescription key="titleFontDescription" type="system" pointSize="14"/>
                                                    </buttonConfiguration>
                                                    <connections>
                                                        <action selector="purchaseButtonPushed:" destination="S42-LK-jRP" eventType="touchUpInside" id="QX4-du-NXc"/>
                                                    </connections>
                                                </button>
...
                            <constraint firstItem="qKZ-TX-HGD" firstAttribute="leading" secondItem="c0S-qd-JD2" secondAttribute="leading" id="jlx-Pn-cxh"/>
                            <constraint firstItem="nff-Et-mcS" firstAttribute="top" secondItem="qKZ-TX-HGD" secondAttribute="bottom" id="lc7-08-L4o"/>
                            <constraint firstItem="qKZ-TX-HGD" firstAttribute="top" secondItem="c0S-qd-JD2" secondAttribute="top" id="yBS-6h-FAe"/>
                            <constraint firstItem="qKZ-TX-HGD" firstAttribute="trailing" secondItem="c0S-qd-JD2" secondAttribute="trailing" id="yhn-h5-Sxa"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="emoticon" id="Xm4-NC-Xi6">
                        <barButtonItem key="rightBarButtonItem" image="cart.fill" catalog="system" id="dlE-d8-oE8">
                            <connections>
                                <segue destination="Czg-Ew-Gve" kind="show" identifier="showHistory" id="fPi-hD-8F8"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
